--- a/styles/_component.scss
+++ b/styles/_component.scss
@@ -121,9 +121,10 @@ a.active::before {
     font-size: 30%;
   }
   @media screen and (max-width: 580px) {
-    padding: 10rem 1% 2rem 1%;
+    padding: 10rem 1% -6rem 1%;
     font-size: 30%;
   }
+ 
 
   .home-content {
     width: 50%;
@@ -138,8 +139,9 @@ a.active::before {
       font-weight: 700;
       margin-bottom: 0.3rem;
       @media screen and (max-width: 580px) {
-        font-size: 4rem;
+        font-size: 2.6rem;
       }
+      
     }
 
     .social-media {
@@ -160,6 +162,10 @@ a.active::before {
         @media screen and (max-width: 580px) {
           width: 3rem;
           height: 3rem;
+        }
+        @media screen and (max-width: 390px) {
+          font-size: 1rem;
+          margin: 2.5rem 1rem 3rem 0;
         }
         a:hover {
           background-color: $main-color;
@@ -210,7 +216,7 @@ a.active::before {
   }
   @media screen and (max-width: 650px) {
     max-width: 600px;
-    padding: 3% 5rem;
+    padding: 3% 1rem;
   }
 
   .about-img {
@@ -223,13 +229,27 @@ a.active::before {
       border: 2px solid $main-color;
       display: inline-flex;
 
+     
+
       @media screen and (max-width: 800px) {
         width: 60vw;
       }
 
       @media screen and (max-width: 700px) {
-        width: 250px;
-        height: 350px;
+        width: 300px;
+        height: 400px;
+        border-radius: 0;
+        align-items: center;
+        margin: auto;
+       
+      }
+      @media screen and (max-width: 380px) {
+       width: 300px;
+       height: 400px;
+       border-radius: 0;
+       align-items: center;
+       margin: auto;
+      
       }
     }
   }
