--- a/styles/_mixin.scss
+++ b/styles/_mixin.scss
@@ -19,7 +19,7 @@ h3 {
     padding-bottom: 5px;
     margin-top: 0.8rem;
   
-      @media screen and (max-width : 380px) {
+      @media screen and (max-width : 580px) {
        font-size: 1.6rem;
       
     }
@@ -40,6 +40,9 @@ h3 {
     font-weight: 600;
     transition: 0.5s ease;
     border: 0.2rem solid transparent;
+    @media screen and (max-width: 390px) {
+      font-size: 1rem;
+    }
 
     &:hover {
       background-color: transparent;
