--- a/styles/_mixin.scss
+++ b/styles/_mixin.scss
@@ -10,6 +10,10 @@ h2{
     line-height: 1.8;
     font-weight: 600;
     padding-bottom: 5px;
+    @media screen and (max-width: 450px) {
+      font-size: 1.4rem;
+    }
+
     
 }
 h3 {
@@ -19,11 +23,9 @@ h3 {
     padding-bottom: 5px;
     margin-top: 0.8rem;
   
-      @media screen and (max-width : 580px) {
-       font-size: 1.6rem;
-      
-    }
-   
+    @media screen and (max-width: 530px) {
+      font-size: 18px;
+     }
   }
   p {
     font-size: 1.6rem;
