--- a/styles/style.css
+++ b/styles/style.css
@@ -27,6 +27,11 @@ h2 {
   font-weight: 600;
   padding-bottom: 5px;
 }
+@media screen and (max-width: 450px) {
+  h2 {
+    font-size: 1.4rem;
+  }
+}
 
 h3 {
   font-size: 3.2rem;
@@ -35,9 +40,9 @@ h3 {
   padding-bottom: 5px;
   margin-top: 0.8rem;
 }
-@media screen and (max-width: 580px) {
+@media screen and (max-width: 530px) {
   h3 {
-    font-size: 1.6rem;
+    font-size: 18px;
   }
 }
 
@@ -219,7 +224,12 @@ a.active::before {
 }
 @media screen and (max-width: 580px) {
   .home .home-content h1 {
-    font-size: 2.6rem;
+    font-size: 4.6rem;
+  }
+}
+@media screen and (max-width: 530px) {
+  .home .home-content h1 {
+    font-size: 3.6rem;
   }
 }
 .home .home-content .social-media a {
@@ -353,6 +363,11 @@ a.active::before {
   line-height: 1.2;
   font-size: 1.8rem;
 }
+@media screen and (max-width: 530px) {
+  .about .about-content h3 {
+    font-size: 1rem;
+  }
+}
 .about .about-content span {
   color: #333;
   font-weight: 400;
@@ -452,11 +467,6 @@ a.active::before {
   font-size: 2.6rem;
   padding-bottom: 5rem;
   transition: 0.5s ease;
-}
-@media screen and (max-width: 380px) {
-  .services .services-container .services-box h3 {
-    font-size: 1.6rem;
-  }
 }
 .services .services-container .services-box h3:hover {
   color: #754ef9;
@@ -595,8 +605,8 @@ a.active::before {
 }
 @media screen and (max-width: 650px) {
   .contact .contact-form form .send-btn {
-    font-size: 10px;
-    padding: 11px 16px;
+    font-size: 8px;
+    padding: 11px 5px;
   }
 }
 .contact .contact-form form .send-btn:hover {
