--- a/styles/_component.scss
+++ b/styles/_component.scss
@@ -106,6 +106,7 @@ a.active::before {
 .home {
   display: flex;
   align-items: center;
+  justify-content: center;
   min-height: 100vh;
   padding: 10rem 7% 2rem 7%;
   background-color: $with-color;
@@ -128,11 +129,9 @@ a.active::before {
 
   .home-content {
     width: 50%;
-
-    @media screen and (max-width: 800px) {
-      margin-left: 8%;
-      margin-bottom: 10%;
-    }
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
     h1 {
       font-size: 5.6rem;
@@ -166,7 +165,7 @@ a.active::before {
           width: 3rem;
           height: 3rem;
         }
-        @media screen and (max-width: 390px) {
+        @media screen and (max-width: 450px) {
           font-size: 1rem;
           margin: 2.5rem 1rem 3rem 0;
         }
@@ -185,7 +184,7 @@ a.active::before {
     @media screen and (max-width: 1000px) {
       padding-left: 0;
     }
-    @media screen and (max-width: 700px) {
+    @media screen and (max-width: 800px) {
       display: none;
     }
 
