--- a/styles/_mixin.scss
+++ b/styles/_mixin.scss
@@ -42,7 +42,14 @@ h3 {
     font-weight: 600;
     transition: 0.5s ease;
     border: 0.2rem solid transparent;
-    @media screen and (max-width: 390px) {
+    max-width: 40%;
+    @media screen and (max-width: 800px) {
+      max-width: 60%;
+    }
+    @media screen and (max-width: 670px) {
+      max-width: 70%;
+    }
+    @media screen and (max-width: 580px) {
       font-size: 1rem;
     }
 
