--- a/styles/style.css
+++ b/styles/style.css
@@ -62,8 +62,19 @@ p {
   font-weight: 600;
   transition: 0.5s ease;
   border: 0.2rem solid transparent;
+  max-width: 40%;
 }
-@media screen and (max-width: 390px) {
+@media screen and (max-width: 800px) {
+  .btn {
+    max-width: 60%;
+  }
+}
+@media screen and (max-width: 670px) {
+  .btn {
+    max-width: 70%;
+  }
+}
+@media screen and (max-width: 580px) {
   .btn {
     font-size: 1rem;
   }
@@ -181,6 +192,7 @@ a.active::before {
 .home {
   display: flex;
   align-items: center;
+  justify-content: center;
   min-height: 100vh;
   padding: 10rem 7% 2rem 7%;
   background-color: #fdfdfd;
@@ -210,12 +222,9 @@ a.active::before {
 }
 .home .home-content {
   width: 50%;
-}
-@media screen and (max-width: 800px) {
-  .home .home-content {
-    margin-left: 8%;
-    margin-bottom: 10%;
-  }
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .home .home-content h1 {
   font-size: 5.6rem;
@@ -253,7 +262,7 @@ a.active::before {
     height: 3rem;
   }
 }
-@media screen and (max-width: 390px) {
+@media screen and (max-width: 450px) {
   .home .home-content .social-media a {
     font-size: 1rem;
     margin: 2.5rem 1rem 3rem 0;
@@ -272,7 +281,7 @@ a.active::before {
     padding-left: 0;
   }
 }
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 800px) {
   .home .home-img {
     display: none;
   }
