--- a/styles/_component.scss
+++ b/styles/_component.scss
@@ -119,20 +119,19 @@ a.active::before {
   }
   @media screen and (max-width: 650px) {
     padding: 15rem 7% 2rem 7%;
-    font-size: 30%;
+  
   }
   @media screen and (max-width: 580px) {
     padding: 10rem 1% -6rem 1%;
-    font-size: 30%;
+  
   }
- 
 
   .home-content {
     width: 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-
+   
     h1 {
       font-size: 5.6rem;
       font-weight: 700;
@@ -263,10 +262,11 @@ a.active::before {
     .heading {
       font-size: 4.5rem;
     }
-    h3 {
+    h4 {
       text-align: left;
       line-height: 1.2;
       font-size: 1.8rem;
+      
       @media screen and (max-width: 530px) {
        font-size: 1rem;
       }
@@ -276,6 +276,9 @@ a.active::before {
       font-weight: 400;
       font-size: 16px;
       text-transform: capitalize;
+      @media screen and (max-width: 530px) {
+        font-size: 12px;
+       }
     }
 
     p {
@@ -372,7 +375,9 @@ a.active::before {
         font-size: 2.6rem;
         padding-bottom: 5rem;
         transition: 0.5s ease;
-       
+        @media screen and (max-width: 800px) {
+          font-size: 2rem;
+         }
         
 
         &:hover {
